hero added with swiper carousel

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tuneflix",
+  "name": "StreamFlix",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,8 +8,9 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-fontawesome": "^1.6.1",
-    "react-scripts": "^3.1.1",
-    "styled-components": "^4.3.2"
+    "react-scripts": "^5.0.0",
+    "styled-components": "^4.3.2",
+    "swiper": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
