--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-fontawesome": "^1.6.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
     "styled-components": "^4.4.1",
     "swiper": "^8.0.0"
